--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-scripts": "5.0.1",
+    "react-to-pdf": "^1.0.1",
     "sass": "^1.69.5",
     "uid": "^2.0.2",
     "web-vitals": "^2.1.4"
